[package]
name = "minigrep"
version = "0.1.0"
authors = ["AW14Saurabh <aw14saurabh@hotmail.com>"]
edition = "2018"

[lib]
name = "minigrep"
path = "src/lib.rs"
test = true
doctest = false

[[bin]]
name = "minigrep"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
